@@ -130,6 +130,7 @@ gboolean caldav_getall(caldav_settings* settings, caldav_error* error) {
 	}
 	curl_easy_setopt(curl, CURLOPT_CUSTOMREQUEST, "REPORT");
 	curl_easy_setopt(curl, CURLOPT_FOLLOWLOCATION, 1);
+	curl_easy_setopt(curl, CURLOPT_UNRESTRICTED_AUTH, 1);
 	curl_easy_setopt(curl, CURLOPT_POSTREDIR, CURL_REDIR_POST_ALL);
 	res = curl_easy_perform(curl);
 	if (res != 0) {
@@ -225,6 +226,7 @@ gboolean caldav_getrange(caldav_settings* settings, caldav_error* error) {
 	curl_easy_setopt (curl, CURLOPT_POSTFIELDSIZE, strlen(request));
 	curl_easy_setopt(curl, CURLOPT_CUSTOMREQUEST, "REPORT");
 	curl_easy_setopt(curl, CURLOPT_FOLLOWLOCATION, 1);
+	curl_easy_setopt(curl, CURLOPT_UNRESTRICTED_AUTH, 1);
 	curl_easy_setopt(curl, CURLOPT_POSTREDIR, CURL_REDIR_POST_ALL);
 	res = curl_easy_perform(curl);
 	if (res != 0) {
