@@ -1,3 +1,9 @@
+libcaldav (0.6.1)
+  * Fix redirection bug to fully support Zimbra server. Patch
+    provided by Timothy Pearson
+
+-- Michael Rasmussen <mir@datanom.net>  Tue, 25 May 2010 22:51:03 +0100
+
 libcaldav (0.6.0)
   * Refactored to properly handle URL schema. Also fixes bug 2985320
   * More accurate error message in case of unresolable host or unable
